[gd_scene load_steps=6 format=3 uid="uid://b5cbjr6nmpdlu"]

[ext_resource type="Script" path="res://Scripts/inventory.gd" id="1_7rnvg"]
[ext_resource type="Texture2D" uid="uid://rwwtu5lcuisg" path="res://Utils/arrow.png" id="1_r42lq"]
[ext_resource type="Texture2D" uid="uid://boj14ltk88nn2" path="res://Sprites/Items/inventoryBackground.png" id="2_fok15"]
[ext_resource type="Texture2D" uid="uid://bv0cjiukdvgxq" path="res://Utils/arrowPressed.png" id="3_q8por"]
[ext_resource type="FontFile" uid="uid://crmpbal4ch8up" path="res://Utils/ACDiaryGirlUnicode.otf" id="5_mv542"]

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7rnvg")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fok15")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="Container" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ButtonLeft" type="VBoxContainer" parent="MarginContainer/Container"]
layout_mode = 2
alignment = 1

[node name="TextureButton" type="TextureButton" parent="MarginContainer/Container/ButtonLeft"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("1_r42lq")
texture_pressed = ExtResource("3_q8por")

[node name="Item" type="Control" parent="MarginContainer/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Container" type="HBoxContainer" parent="MarginContainer/Container/Item"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Image" type="TextureRect" parent="MarginContainer/Container/Item/Container"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="DescriptionContainer" type="VBoxContainer" parent="MarginContainer/Container/Item/Container"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Name" type="Label" parent="MarginContainer/Container/Item/Container/DescriptionContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_mv542")
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1

[node name="Description" type="Label" parent="MarginContainer/Container/Item/Container/DescriptionContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_mv542")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
autowrap_mode = 3

[node name="ButtonRight" type="VBoxContainer" parent="MarginContainer/Container"]
layout_mode = 2
alignment = 1

[node name="TextureButton" type="TextureButton" parent="MarginContainer/Container/ButtonRight"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("1_r42lq")
texture_pressed = ExtResource("3_q8por")
flip_h = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -218.0
offset_top = -44.0
offset_right = 218.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("5_mv542")
theme_override_font_sizes/font_size = 25
text = "Premi [ ESC ] per ritornare in gioco"
horizontal_alignment = 1
